--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -180,7 +180,7 @@ License: <TMPL_VAR LICENSE>
 </TMPL_IF>
 
 <div class="pagedate">
-Last edited <TMPL_VAR MTIME>
+Last updated <TMPL_VAR MTIME>
 <!-- Created <TMPL_VAR CTIME> -->
 </div>
 
