link date to git history

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -183,7 +183,7 @@ License: <TMPL_VAR LICENSE>
 </TMPL_IF>
 
 <div class="pagedate">
-Last updated <TMPL_VAR MTIME>
+<a href="<TMPL_VAR HISTORYURL>">Last updated <TMPL_VAR MTIME></a>
 <!-- Created <TMPL_VAR CTIME> -->
 </div>
 
