trying a directive in a page template

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -195,5 +195,7 @@ License: <TMPL_VAR LICENSE>
 
 <TMPL_IF HTML5></article><TMPL_ELSE></div></TMPL_IF>
 
+[[!map pages="./*" show=title]]
+
 </body>
 </html>
