added atom feed

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -12,6 +12,7 @@
 </TMPL_IF>
 <TMPL_IF HTML5><meta charset="utf-8" /><TMPL_ELSE><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></TMPL_IF>
 <meta name="viewport" content="width=device-width">
+<link rel="alternate" type="application/atom+xml" href="http://git.greptilian.com/?p=wiki.git;a=atom" title="wiki.greptilian.com commits"/>
 <title><TMPL_VAR TITLE></title>
 <TMPL_IF FAVICON>
 <link rel="icon" href="<TMPL_VAR BASEURL><TMPL_VAR FAVICON>" type="image/x-icon" />
