--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -184,7 +184,7 @@ License: <TMPL_VAR LICENSE>
 </TMPL_IF>
 
 <div class="pagedate">
-<a href="<TMPL_VAR HISTORYURL>">Last updated <TMPL_VAR MTIME></a>
+Last <a href="<TMPL_VAR HISTORYURL>">updated</a> <TMPL_VAR MTIME>
 <!-- Created <TMPL_VAR CTIME> -->
 </div>
 
@@ -195,6 +195,12 @@ License: <TMPL_VAR LICENSE>
 <TMPL_IF HTML5></footer><TMPL_ELSE></div></TMPL_IF>
 
 <TMPL_IF HTML5></article><TMPL_ELSE></div></TMPL_IF>
+
+<hr>
+
+<div>
+<a href="/">Home</a> | <a href="/about">About</a> | <a href="/sitemap">Sitemap</a> | &copy; 2012 <a href="http://greptilian.com">Philip Durbin</a> | <a href="http://twitter.com/philipdurbin">@philipdurbin</a> | <a href="mailto:philipdurbin@gmail.com">philipdurbin@gmail.com</a>
+</div>
 
 </body>
 </html>
