added link to recent changes

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -199,7 +199,7 @@ Last <a href="<TMPL_VAR HISTORYURL>">updated</a> <TMPL_VAR MTIME>
 <hr>
 
 <div>
-<a href="/">Home</a> | <a href="/about">About</a> | <a href="/sitemap">Sitemap</a> | &copy; 2012 <a href="http://greptilian.com">Philip Durbin</a> | <a href="http://twitter.com/philipdurbin">@philipdurbin</a> | <a href="mailto:philipdurbin@gmail.com">philipdurbin@gmail.com</a>
+<a href="/">Home</a> | <a href="/about">About</a> | <a href="/sitemap">Sitemap</a> | <a href="http://git.greptilian.com/?p=wiki.git;a=shortlog">Recent changes</a> | &copy; 2012 <a href="http://greptilian.com">Philip Durbin</a> | <a href="http://twitter.com/philipdurbin">@philipdurbin</a> | <a href="mailto:philipdurbin@gmail.com">philipdurbin@gmail.com</a>
 </div>
 
 </body>
