separate lines in tables

--- a/local.css
+++ b/local.css
@@ -27,3 +27,10 @@ code {
 pre code {
   border: none;
 }
+
+td {
+  border: 1px solid black;
+  border-left: none;
+  border-right: none;
+  border-collapse: collapse;
+}
