--- a/local.css
+++ b/local.css
@@ -29,7 +29,7 @@ pre code {
 }
 
 td {
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   border-left: none;
   border-right: none;
   border-collapse: collapse;
