--- a/local.css
+++ b/local.css
@@ -32,5 +32,9 @@ td {
   border-bottom: 1px solid black;
   border-left: none;
   border-right: none;
-  border-collapse: collapse;
+}
+
+table{
+  border-collapse: collapse; 
+  border-spacing: none; 
 }
