--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -11,7 +11,7 @@
 </TMPL_IF>
 </TMPL_IF>
 <TMPL_IF HTML5><meta charset="utf-8" /><TMPL_ELSE><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></TMPL_IF>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="alternate" type="application/atom+xml" href="http://git.greptilian.com/?p=wiki.git;a=atom" title="wiki.greptilian.com commits"/>
 <title>
 <TMPL_LOOP NAME="PARENTLINKS">
